--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-primary/10">
+<div class="bg-primary-50">
     <div class="container mx-auto py-8 px-4 md:px-0">
         <p class="text-center text-gray-700 text-sm">
             <strong>DIU CSE Alumni Portal</strong> is a project developed by the DIU CSE Alumni Association to connect
